src/Styles/Contact.css
.Contact-container {
  height: 65vh;
  margin: auto;
  padding-top: 5%;
  padding: 2%;
  background-color: rgb(32, 39, 47);
}

.Contact-message {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 50%;
}

.Contact-message input {
  min-width: 80%;
  max-width: 100%;

  margin-top: 2%;
  background-color: #1b4552;
  box-shadow:
    0 0 10px #d74a49,
    0 0 20px #d74a49,
    0 0 10px rgba(215, 74, 73, 0.7);
  color: whitesmoke;
  font-size: large;
  border-radius: 10px;
  padding-left: 1%;
  border: none;
}

.submit-span {
  text-align: center;
}

.Contact-message textarea {
  min-width: 80%;
  max-width: 100%;

  max-height: 50%;
  min-height: 50%;
  margin-top: 2%;
  margin-bottom: 1%;
  background-color: #1b4552;
  color: whitesmoke;
  font-size: larger;
  border-radius: 5px;
  box-shadow:
    0 0 10px #d74a49,
    0 0 20px #d74a49,
    0 0 10px rgba(215, 74, 73, 0.7);
  transition: ease-in-out 0.2s;
  padding-left: 1%;
  border: none;
}

.Contact-message textarea:hover,
input:hover {
  box-shadow:
    0 0 15px #d74a49,
    0 0 20px #d74a49,
    0 0 45px rgba(215, 74, 73, 0.8);
}

.Contact-message textarea:focus-visible,
input:focus-visible {
  outline: none;
}

#Contact-h2 {
  text-align: center;
  font-size: 40px;
  margin-top: 10%;
  background-color: rgb(32, 39, 47);
  margin-bottom: 0;
  padding-bottom: 5%;
  padding-top: 5%;

  text-shadow:
    0 0 1px #6aeaff,
    0 0 2px #6aeaff,
    0 0 5px #6aeaff;
}

.Contact-text {
  display: flex;
  justify-content: center;
  text-align: center;
}

.Contact-message button {
  background-color: #d74a49;
  color: white;
  border: none;
  padding: 12px 24px;
  border-radius: 8px;
  cursor: pointer;

  /* Glow */
  box-shadow:
    0 0 10px #d74a49,
    0 0 20px #d74a49,
    0 0 10px rgba(215, 74, 73, 0.7);

  /* Smooth movement & glow change */
  transition:
    transform 1s ease-in-out,
    box-shadow 1s ease-in-out;

  position: relative;
  overflow: hidden;
  width: clamp(180px, 10%, 400px);
  padding: 20px;
}

/* Hover animation same as Main-body-div-button */
.Contact-message button:hover {
  box-shadow:
    0 0 15px #d74a49,
    0 0 30px #d74a49,
    0 0 45px rgba(215, 74, 73, 0.8);
  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
}

/* Shine effect */
.Contact-message button::after {
  content: "";
  position: absolute;
  top: 0;
  left: -100%;
  width: 50%;
  height: 100%;
  background: rgba(255, 255, 255, 0.3);
  transform: skewX(35deg);
  transition: left 0.55s cubic-bezier(0.19, 1, 0.22, 1);
}

.Contact-message button:hover::after {
  left: 120%;
}

@media only screen and (min-width: 765px) {
  .Contact-message textarea {
    max-width: 30%;
    min-width: 30%;
    padding-left: 5%;
    margin-top: 1%;
    margin-bottom: 1%;
  }
  .Contact-message input {
    min-width: 30%;
    height: 13%;
    padding-left: 5%;
    margin-top: 1%;
  }
}

